# phew

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  sonar-project.properties
.agent/workflows/: commit.md
.github/workflows/: ci.yml
docs/: DESIGN.md  DESIGN_DRAFT.md  how-it-works.md  php-developer-guide.md  quick-start.md  rust-developer-guide.md
docs/ai/: contract.md
scripts/: resolve-pr-threads.mjs
src/: lib.rs  main.rs
src/formatter/: docblock.rs  echo.rs  engine.rs  indent.rs  mod.rs  php.rs  split.rs
src/io/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs
tests/fixtures/: simple.html  with_attributes.html  yii_basic.php  yii_complex.php  yii_messy.php  yii_real.php
tests/fixtures/expected/: 01_html_div.html  02_html_attrs.html  03_php_echo.php  04_control_flow.php  04_if_foreach.php  05_method_chains.php  06_args_split.php  06_function_args.php  07_php_attrs.php  07_php_in_attributes.php  08_table.php  09_active_form.php  09_form_builder.php  10_compact.php  10_single_line_stress.php  11_blank_lines.php  12_deep_nesting.php  12_nesting.php  13_header.php  14_begin_end.php  14_begin_end_tag.php  15_gridview.php  16_nested_array.php  16_select2_widget.php  17_ternary.php  18_modal.php  19_breadcrumbs.php  20_data_attrs.php  21_field_config.php  22_htmx.php  23_submit_group.php  24_nested_if.php  25_pjax_list.php  26_foreach_cards.php  27_detail_view.php  28_nav_items.php  29_inline_loop.php  30_switch_case.php  31_script_raw_text.php  32_style_raw_text.php  (+53 more)
tests/fixtures/input/: 01_simple_div.html  03_echo.php  (+88 more)
