[package]
name = "phew"
version = "0.5.8"
edition = "2024"
rust-version = "1.85"
description = "Fast HTML + PHP formatter for Yii 2 view files"
license = "MIT"
repository = "https://github.com/WarLikeLaux/phew"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "1"
